@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2006-05-31  Ralf Wildenhues  &lt;Ralf.Wildenhues@gmx.de&gt;
+
+<UL>
+  <LI> configure.ac: Fix arguments to AC_CHECK_HEADER.
+
+</UL>
+<p>
 2006-05-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
